--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -52,7 +52,7 @@ a:visited{
 
 body {
   background-color:#8b1713;
-  font-size:12px;
+  font-size:0.75em;
   font-family: Verdana, sans-serif;
   line-height:18px;
   text-align:center;
@@ -138,7 +138,8 @@ div.errorExplanation ul li{
   display:inline-block;
   float:left;
   margin:0px 40px 0px 0;
-  font-size:18px;
+  padding-bottom:0px;
+  font-size:1.2em;
   height:60px;
   background-color:transparent;
   background-image: url('/images/css/nav_menu_icon_bg.png');
@@ -399,7 +400,7 @@ div.new_event{
 h3.filter_description{
   float:left;
   width:660px;
-  font-size:21px;
+  font-size:1.5em;
   margin-left:42px;
   margin-bottom:12px;
   list-height:1.5;
@@ -431,7 +432,7 @@ ul.search_subscription_options{
   float:left;
   border-left:1px solid #C2C2C3;
   margin-top:6px;
-  font-size:9px;
+  font-size:0.83em;
   padding-left:12px;
   margin-bottom:12px;
   margin-top:42px;
@@ -440,7 +441,7 @@ ul.search_subscription_options{
 ul.search_subscription_options li{
   padding-left:42px;
   list-style: none;
-  background-image:url('/images/sm_icons.png');
+  background-image:url('/images/sm_icons.gif');
   background-repeat:no-repeat;
   border-bottom:none;
   margin-top:2px;
@@ -454,7 +455,7 @@ ul.search_subscription_options li{
   position:relative;
 }
 .form_wrapper form label{
-  font-size:10px;
+  font-size:0.83em;
   font-weight:bold;
   float:left;
   width:100px;
@@ -465,7 +466,7 @@ ul.search_subscription_options li{
 .form_wrapper form input.text{
   float:left;
   width:300px;
-  font-size:16px;
+  font-size:1.33em;
   padding:3px;  
 }
 .form_wrapper form select{
@@ -516,7 +517,7 @@ div.checkbox label{
 ul.sm_icons li{
   padding-left:32px;
   list-style: none;
-  background-image:url('/images/sm_icons.png');
+  background-image:url('/images/sm_icons.gif');
   background-repeat:no-repeat;
   border-bottom:none;
 }
